WIP: Get the email address from oauth2.